<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Play list</string>
    <string name="total_songs">Total song</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="permission_granted">PERMISSION GRANTED</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to\nWorld of music</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song album</string>
    <string name="cloud">Cloud</string>
    <string name="question_close_app">Do you want to close app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="equalizer_not_supported">Equalizer not supported</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="timer_stop_15">Music playback will be stopped after 15 minutes</string>
    <string name="timer_stop_30">Music playback will be stopped after 30 minutes</string>
    <string name="timer_stop_60">Music playback will be stopped after 60 minutes</string>
    <string name="timer_stop">Stop timer</string>
    <string name="question_stop_timer">Do you want to stop timer?</string>
    <string name="sharing_music_file">Sharing Music File</string>
    <string name="search_view">Search view</string>
    <string name="music_server">Music from the server</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="playlist_details">Playlist details</string>
    <string name="add">Add</string>
    <string name="user_name">User name</string>
    <string name="playlist_exists">Playlist exists!!!</string>
    <string name="question_delete_playliist">Do you want to delete playlist?</string>
    <string name="add_song">Add song</string>
    <string name="remove_all">Remove all</string>
    <string name="search_song">Search song</string>
    <string name="remove">Remove</string>
    <string name="question_remove_all_song">Do you want to remove all song?</string>
    <string name="topic_feedback">Topic</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">Send</string>
    <string name="went_something_wrong">Went Something Wrong!!</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>