<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="2dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:background="@color/transparent"
            android:layout_marginStart="@dimen/padding_4dp"
            app:tint="@android:color/black"
            android:contentDescription="@string/back_btn"
            android:padding ="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/world_of_music"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite_empty_icon"
            android:background="@color/transparent"
            android:layout_marginEnd="@dimen/padding_4dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_btn"  />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="@dimen/padding_10dp"
        android:src="@drawable/music_player_icon_slash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/blue"
        app:strokeWidth="5dp"/>

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/padding_10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/previous_icon"
            app:iconSize = "@dimen/padding_40dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/pause_icon"
            app:iconSize = "@dimen/padding_50dp"
            android:layout_marginHorizontal="@dimen/padding_25dp"
            app:shapeAppearanceOverlay="@style/curved"
            app:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/next_icon"
            app:iconSize = "@dimen/padding_40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_25dp"
        android:orientation="horizontal"
        android:layout_margin="@dimen/padding_16dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/start_tv"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/end_tv"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat_icon"
            android:background="@color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/equalizer_icon"
            android:background="@color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer_icon"
            android:background="@color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:background="@color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>